fix(mobile menu): fixes the alignment

--- a/scss/theme/_mobile.scss
+++ b/scss/theme/_mobile.scss
@@ -143,9 +143,12 @@
 
     background: rgba($gray-color-dark,0.1);
     display: flex;
-    align-items: center;
-
+    flex-direction: column;
+    position: relative;
+    // align-items: center;
+    
     a {
+      padding-left: 10px;
       font-family: "Roboto";
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
@@ -172,6 +175,11 @@
     line-height: 1rem;
     padding-left: 5px;
     float: left;
+
+    // 
+    position: absolute;
+    top: 14px;
+    // 
 
     &:before {
       display: inline-block; margin-right: 2pt;
